*Empty MediaWiki Message*

--- a/Om_2008_Guide.mw
+++ b/Om_2008_Guide.mw
@@ -76,7 +76,7 @@ The Media Player is basically useless due to the default theme. To install with 
 
 ''' Bugs/Fixes '''
 
-*The Media Player is basically unusable because of the skin.
+*The Media Player is basically unusable because of the skin. And is also very buggy.
 *Battery meter always says its charging. Installing a terminal and running "apm" will display the proper battery status.
 
 *Your phone will go into standby after 30 seconds EVEN when connected to your computer or wall charger. (Disable this under the settings menu)
