*Empty MediaWiki Message*

--- a/Mofi.mw
+++ b/Mofi.mw
@@ -1,10 +1,10 @@
 == What is Mofi? ==
 
-Mofi is software for the OpenMoko platform allowing phone users to search for and connect to available wireless access points (APs)
+Mofi is software for the Openmoko platform allowing phone users to search for and connect to available wireless access points (APs)
 
 == Where can I download Mofi? ==
 
-Mofi is available on the OpenMoko forge at http://projects.openmoko.org/projects/mofi/
+Mofi is available on the Openmoko forge at http://projects.openmoko.org/projects/mofi/
 
 Download the latest '''package''' at http://projects.openmoko.org/frs/download.php/277/mofi_0.02_armv4t.ipk
 
