contact URL fixed

--- a/FAQ.mw
+++ b/FAQ.mw
@@ -12,7 +12,7 @@ A: Openmoko is a software platform and the world's first completely open mobile 
 
 We would love to hear from you.
 
-* If you are interested in joining Openmoko as a software developer, please visit http://www.openmoko.com/contact-index.html and send us an e-mail.  
+* If you are interested in joining Openmoko as a software developer, please visit http://www.openmoko.com/contact.html and send us an e-mail.  
 * Or register some your project at http://projects.openmoko.org/
 
 === Q: When and where can I buy a [[Neo 1973]]? ===
