--- a/Group_sales.mw
+++ b/Group_sales.mw
@@ -3049,8 +3049,13 @@ We are already 6, so 4 remaining. Contact me at : jec at jesc dot ch
 | 0
 | 0
 |-
+| 9. Siongui(siongui@)
+| 1
+| 0
+| 0
+|-
 |Total number:
-| 11
+| 12
 | 5
 | 0
 |}
