/* Updates */ More details for updates with link to Julian Chu's message

--- a/Om_2008.8.mw
+++ b/Om_2008.8.mw
@@ -116,5 +116,7 @@ There should be some official updates for 2008.8 setup soon, but in the meantime
 
 {{note|There are *NO* updates available for 2008.8 anywhere on buildhost.openmoko.org - the daily-feeds directory is incompatible with 2008.8 and will corrupt your software configuration if you use it.}}
 
+'''More details about the updates being set-up here : http://lists.openmoko.org/pipermail/community/2008-August/026515.html'''
+
 [[Category:Openmoko]]
 [[Category:Om 2008.8]]
