*Empty MediaWiki Message*

--- a/Openmoko_developer_guide.mw
+++ b/Openmoko_developer_guide.mw
@@ -6,7 +6,7 @@ This page describes how to start your Openmoko development plan - how to prepare
 [[Image:OpenmokoFramework08.png|center|450px]]
 
 
-=Part I Choose your software development tool=
+==Part I Choose your software development tool==
 *[[System Developer]]
 *[[Development Environment]]
 *[[Java]]
@@ -14,40 +14,40 @@ This page describes how to start your Openmoko development plan - how to prepare
 *[[Python]]
 *[[BitBake]]
 *[[Qtopia_on_X11|Qtopia on X11]]
-==OS==
+===OS===
 *[[Other OSes]]
 
-=Part II Coding and compiling=
+==Part II Coding and compiling==
 *[[Toolchain]]
 *[[OpenEmbedded]]
 **[[BitBake]]
 *[[MokoMakeFile]]
 
-=Part III Running your program=
+==Part III Running your program==
 
 *[[Customizing the Openmoko Distribution]]
 
-==Emulation==
+===Emulation===
 *[[Automatic emulation in Ubuntu]]
 *[[Host-based development with Xoo and Xephyr]]
 *[[Running Openmoko on PC]]
 *[[Test Openmoko Emulation with chroot image]]
 
-=Part IV Sharing programs=
+==Part IV Sharing programs==
 *[[Latest Images]]
 *[[Distributions]]
 
-=Part V Installation=
-==Install==
+==Part V Installation==
+===Install===
 *[[Package management]]
 *[[How to run Openmoko Apps on PC]]
 *[[Repositories ]]
 
-==Image Flashing==
+===Image Flashing===
 *[[MacOS X]]
 *[[Flashing Openmoko]]
 
-=Part VI Tools used on Openmoko=
+==Part VI Tools used on Openmoko==
 
 *[[U-boot|Bootloader]]
 *[[Bootloader_commands|Bootloader Command]]
@@ -64,7 +64,7 @@ This page describes how to start your Openmoko development plan - how to prepare
 *[[Dfu-util]]
 *[[Mono]]
 
-===Linux Core Services===
+====Linux Core Services====
 * [[Gsmd]]
 *[[Alarm daemon]]
 *[[Qpegps]]
@@ -72,9 +72,9 @@ This page describes how to start your Openmoko development plan - how to prepare
 *[[Dbus device API]]
 *[[Opkg]]
 *[[QEMU command line]]
-===Resources===
+====Resources====
 *[[Development resources]]
-===Community Applications===
+====Community Applications====
 {{app}}
 
 
