*Empty MediaWiki Message*

--- a/Openmoko_developer_guide.mw
+++ b/Openmoko_developer_guide.mw
@@ -74,7 +74,7 @@ This page describes how to start your Openmoko development plan - how to prepare
 *[[QEMU command line]]
 ====Resources====
 *[[Development resources]]
-====Community Applications====
+===Community Applications===
 {{app}}
 
 
