--- a/Gutenflash.mw
+++ b/Gutenflash.mw
@@ -26,6 +26,27 @@ Make ipk:
  *make
  *scp file to your phone
 
+'''Note:''' I get the error:
+
+root@om-gta02:~# opkg install gutenflash_0.8.2_arm.ipk
+
+Installing gutenflash (0.8.2) to root...
+
+Collected errors:
+
+ERROR: Cannot satisfy the following dependencies for gutenflash:
+
+         python-string *
+
+root@om-gta02:~# opkg download python-string
+
+Collected errors:
+
+ Cannot find package python-string.
+
+Check the spelling or perhaps run 'opkg update'
+
+
 
 [[Image:Gutenflash.png]]
 
