--- a/Wish_List.mw
+++ b/Wish_List.mw
@@ -336,6 +336,8 @@ I think synchronization sould be handled by computer with opensync+syncml based 
 
 * If this cellphone is thought also as a PDA, of course it needs a calendar. But I would like to see something better than just a calendar, I was thinking that there could be some application using "fisheye" view. Just like [http://www.cs.umd.edu/hcil/datelens/], though that example seem a bit chaotic. --[[User:Yprum|Yprum]] 22:27, 21 February 2008 (CEST)
 
+* I would love to see something similar to the palm application "datebk" [http://www.pimlicosoftware.com/]. It comes with everything whats neat and handy. --[[User:Trixer10|Trixer10]] 09:12, 14 August 2008 (UTC)
+
 ==== Address Book ====
 
 * Option to search not just the stored list of addresses, but one or more of the online phonebooks. Probably should be modular to make adding/changing phonebook sites easy.  Also allows for future integration with LDAP servers or whatever.
