--- a/Gutenflash.mw
+++ b/Gutenflash.mw
@@ -36,13 +36,13 @@ Collected errors:
 
 ERROR: Cannot satisfy the following dependencies for gutenflash:
 
-         python-string *
+python-string
 
 root@om-gta02:~# opkg download python-string
 
 Collected errors:
 
- Cannot find package python-string.
+Cannot find package python-string.
 
 Check the spelling or perhaps run 'opkg update'
 
