--- a/Openmoko_Wiki_Official_Index_Page.mw
+++ b/Openmoko_Wiki_Official_Index_Page.mw
@@ -168,6 +168,7 @@ __NOTOC__
 *[[Picture Viewer]]
 *[[Openmoko SMS Middleware]]
 *[[Zedlock]]
+*[[Navit]]
 
 ====Application Guideline====
 *[[Minimo|Building Minimo web browser ]]
