--- a/Openmoko_Wiki_Official_Index_Page.mw
+++ b/Openmoko_Wiki_Official_Index_Page.mw
@@ -24,29 +24,7 @@ __NOTOC__
 |}
 
 ==Hardware ==
-===Flash===
-*[[NAND Flash]]
-*[[Partition]]
-
-===Chip===
-*[[Hammerhead/Integrators]]
-*[[Samsung S3C2442B]]
-*[[Hardware:AGPS]]
-*[[GTA01 gsm modem]]
-
-===USB===
-*[[USB DFU]]
-*[[USB Product IDs]]
-*[[USB Networking]]
-
-===Adapter===
-*[[Amontec JTAGkey]]
-
-===Bluetooth ===
-*[[Bluetooth_Support|Manually using Bluetooth]]
-*[[ Bluetooth powered Multi-SIM support/Device Support]]
-*[[Openmoko Bluetooth remote controller]]
-*[[How to use bluetooth to transfer data between Neo and Desk-top]]
+{{Hardware}}
 
 ==Hardware  Support==
 ===GTA01===
