--- a/Openmoko_Wiki_Official_Index_Page.mw
+++ b/Openmoko_Wiki_Official_Index_Page.mw
@@ -1,8 +1,8 @@
 __NOTOC__
 ==Introduction Of Openmoko==
-{| class="wikitable" cellspacing="0" cellpadding="0" width=100%
+{| class="wikitable" cellspacing="1" cellpadding="0" style="padding: 0%; margin:0em 0em 1em 0em; border:1px solid #ffffff; background:#ffffff; width:100%;"
 |-
-|valign="TOP" style="background:#ffffff;border-left:5px solid white;border-right:5px solid white;border-bottom:0px solid white; border:1px solid #eeeeee; " | 
+! style="background:#ffffff;border-left:1px solid #ffffff;border-right:1px ; border-top:2px solid 75d806; border:1px solid #ffffff; width:50% " |  
 <div align=left>
 *[[Introduction]]
 *[[OpenmokoFramework]]
