--- a/Openmoko_Wiki_Official_Index_Page.mw
+++ b/Openmoko_Wiki_Official_Index_Page.mw
@@ -12,7 +12,7 @@ __NOTOC__
 *[[Current events]]
 *[[Business Development]]
 </div>
-|valign="TOP" style="background:#ffffff;border-left:5px solid white;border-right:5px solid white;border-bottom:0px solid white; border:1px solid #ffffff; " | 
+! style="background:#ffffff;border-left:1px solid #ffffff;border-right:1px ; border-top:2px solid 75d806; border:1px solid #ffffff; width:50% " | 
 <div align=left>
 *[[Trademark Policy]]
 *[[License]]
