--- a/Om_2008.8.mw
+++ b/Om_2008.8.mw
@@ -52,19 +52,11 @@ Either way you create your own meaning. It's about you.
 === Om 2008.8 Guide ===
 A guide for getting to know Om 2008.8 : [[Om 2008.8 Guide]]
 
-= Download =
+= Installing =
 
-== Flash Om 2008.8 images ==
-
-'''Download Om 2008.8 images'''
-
-These images are to be flashed to the NAND memory of the FreeRunner :
-* [http://downloads.openmoko.org/releases/Om2008.8/Om2008.8.rootfs.jffs2 Om2008.8.rootfs.jffs2] (root filesystem image)
-* [http://downloads.openmoko.org/releases/Om2008.8/Om2008.8.uImage.bin Om2008.8.uimage.bin] (kernel)
-
-'''Install'''
-
-* For instructions on how to flash your device, please refer to [[Flashing the Neo FreeRunner]].
+If you want install this software distribution to your device, you have to follow these steps:
+* Download the recent image of [[Downloads#Openmoko_2008.8_images_.28ASU.29|Om2008.8]]
+* [[Flashing the Neo FreeRunner|Flash]] to your Neo FreeRunner
 
 = Known Issues =
 '''GSM'''
