--- a/Om_2008.8.mw
+++ b/Om_2008.8.mw
@@ -55,7 +55,7 @@ A guide for getting to know Om 2008.8 : [[Om 2008.8 Guide]]
 = Installing =
 
 If you want install this software distribution to your device, you have to follow these steps:
-* Download the recent image of [[Downloads#Openmoko_2008.8_images_.28ASU.29|Om2008.8]]
+* Download the recent image of Om2008.8 on the [[Downloads#Openmoko_2008.8_images_.28ASU.29|Downloads]] page
 * [[Flashing the Neo FreeRunner|Flash]] to your Neo FreeRunner
 
 = Known Issues =
