/* Download the image files that you will need */

--- a/Flashing_the_Neo_FreeRunner.mw
+++ b/Flashing_the_Neo_FreeRunner.mw
@@ -39,7 +39,7 @@ See additional driver installation instructions for Windows at [[Dfu-util-window
 
 === Download the image files that you will need ===
 
-Exactly what files you need depends on what you are trying to install. In most cases you will need to install a Kernel and a Root Filesystem (rootfs). In rare cases, when there is a bug you need fixed, you will also install a new bootloader.
+Exactly what files you need depends on what you are trying to install. In most cases you will need to install a Kernel (uImage) and a Root Filesystem (rootfs). In rare cases, when there is a bug you need fixed, you will also install a new bootloader.
 
 Please read [[Distributions]] for choosing the distribution which fits your needs, and then see [[Download]] for downloading.
 
