*Empty MediaWiki Message*

--- a/Om_2007.2.mw
+++ b/Om_2007.2.mw
@@ -10,6 +10,12 @@ An official announcement was made by Sean Moss-Pultz on August 20:
 
 (Initially this was named OM-2008 in SVN but renamed shortly after that.)
 
+= Installing =
+
+If you want install this software distribution to your device, you have to follow these steps:
+* Download the recent image of Om2007.2 on the [[Downloads#Openmoko_2007.2_images_.28GTK.29|Downloads]] page
+* [[Flashing the Neo FreeRunner|Flash]] to your Neo FreeRunner
+
 ==FAQ==
 [[Image:Openmoko2007.2 home screen.png|thumb|right|home screen of Om 2007.2]]
 
