/* Openmoko Inc. driven release targets */

--- a/Distributions.mw
+++ b/Distributions.mw
@@ -39,7 +39,7 @@ One should only use feeds from packages of the same source-branch, else 'stuff w
 
 * [[Om 2007.2]]
 * Availabilty: [http://buildhost.openmoko.org/daily/ Official Buildhost] and [[MokoMakefile]] support for development builds
-* Download: [http://buildhost.openmoko.org/daily/freerunner/  Releases are labeled "openmoko-devel-image" ]
+* Download: [[Downloads#Openmoko_2007.2_images_.28GTK.29]]
 * Several videos of this stack by [http://uk.youtube.com/user/freeyourphone Youtube user freeyourphone] and [http://uk.youtube.com/watch?v=U05kZfURPig&NR=1 video review by BVB Tech]
 This is the base-system which is installed on Freerunner when it leaves the factory.
 
@@ -51,7 +51,7 @@ thus patches are still welcome, especially if they help development of SHR.
 Om 2008.8 has been started to integrate the [http://trolltech.com/products/qtopia Qtopia] stack - on X11 - with a new set of graphically pleasing applications based on the Enlightenment Foundation Libraries. ASU is the internal name and is known as Om 2008.8 upon its release on August 8, 2008.  Qtopia is a more mature product than the GNOME Mobile stack and you can expect all the standard feature phone applications to work in a solid way. It uses the Qtopia phone server. Since - contrary to standard Qtopia - it does not directly use the framebuffer, non-Qt applications can safely share the screen with Qt applications.
 
 * [[Om2008.8|Om 2008.8]]
-* Download: [http://downloads.openmoko.org/releases/Om2008.8/  Releases are labeled "Om2008.8" ]
+* Download: [[Downloads#Openmoko_2008.8_images_.28ASU.29]]
 
 === FSO - freesmartphone.org ===
 
