--- a/Openmoko_Wiki_Official_Index_Page.mw
+++ b/Openmoko_Wiki_Official_Index_Page.mw
@@ -24,14 +24,18 @@ __NOTOC__
 
 ==Hardware ==
 {{Hardware}}
-
-==Hardware  Support==
 ===GTA01===
+
+{| class="wikitable" cellspacing="1" cellpadding="0" style="padding: 0%; margin:0em 0em 1em 0em; border:1px solid #ffffff; background:#ffffff; width:100%;"
+|-
+! style="background:#ffffff;border-left:1px solid #ffffff;border-right:1px ; border-top:2px solid 75d806; border:1px solid #ffffff; width:50% " |  
+<DIV ALIGN=LEFT>
 *[[Neo1973]]
 *[[Neo1973 hardware]]
 *[[Disassembling Neo1973]]
 *[[Neo1973 Phase 1]]
 *[[Getting Started with your Neo1973]]
+===Hardware component===
 =====Audio=====
 *[[Neo1973 audio subsystem]]
 *[[LM4857]]
@@ -39,12 +43,13 @@ __NOTOC__
 *[[Neo1973 Battery]]
 *[[Hardware:Neo1973:Alternate Cases:Extra battery]]
 *[[Neo1973 Battery Charger]]
-
 =====Power=====
 *[[Neo1973 Power Button]]
-
 *[[Neo1973 GTA01 Power Management]]
+</DIV>
 
+! style="background:#ffffff;border-left:1px solid #9999cc;border-right:1px ; border-top:2px solid 75d806; border:1px solid #ffffff; width:35% " |
+<DIV ALIGN=LEFT>
 =====USB=====
 *[[Neo1973 USB host]]
 =====Debug Board=====
@@ -52,11 +57,14 @@ __NOTOC__
 *[[Neo1973 Debug Board v3]]
 =====Development Board=====
 *[[QT2410]]
-
 =====Accessory=====
 *[[Car phone holder for neo1973]]
 *[[Related Hardware]]
+=====Neo1973:Alternate Cases=====
+*[[Hardware:Neo1973:Alternate Cases]]
+</DIV>
 
+|}
 =====Alternate cases=====
 *[[Hardware:Neo1973:Alternate Cases:Digital gaming]]
 *[[Hardware:Neo1973:Alternate Cases:Analogue gaming]]
