Redirecting to [[GTA01:Neo 1973]]

--- a/Neo_1973.mw
+++ b/Neo_1973.mw
@@ -1,3 +1,5 @@
+#REDIRECT [[GTA01:Neo_1973]]
+
 [[Image:FIC-neo1973 small.jpg|120px|left]]
 {{Box}}
 The '''Neo 1973''' is the first phone designed to run [[Openmoko]].
