/* Navigating menus and applications */

--- a/Getting_Started_with_your_Neo_FreeRunner.mw
+++ b/Getting_Started_with_your_Neo_FreeRunner.mw
@@ -123,7 +123,7 @@ When the screen is locked, you should see a Matrix-style green graphic with the 
 
 == Navigating menus and applications ==
 
-''Note:'' this section describes the interface used by the "2007.2" image, which is the current default image for Openmoko.
+''Note:'' this section describes the interface used by the "2007.2" image, which is the current default image for Openmoko. For some helpful tips on the "2008.8" image see this [[Om_2008.8_Guide]]
 
 ====Today Page====
 
