/* Using the Full Qwerty keyboard */

--- a/Om_2008_keyboard.mw
+++ b/Om_2008_keyboard.mw
@@ -49,6 +49,7 @@ If you hover your finger (or stylus) over a letter for more than 2 seconds a mag
 Most applications should bring up the keyboard automatically when keyboard input is required, however, advanced users can activate a small 'qwerty' button which can manually toggle the keyboard on and off.  See the [[Keyboard_Toggle|keyboard toggle tutorial]] for more information.
 
 == Using the Full Qwerty keyboard ==
+If you prefer a full qerty keyboard you have to do some steps:
 * backup /usr/lib/enlightenment/modules/illume/keyboards/Default.kbd and /usr/lib/enlightenment/modules/illume/keyboards/Full-QWERTY.kbd
 * opkg install http://buildhost.openmoko.org/daily-feed/armv4t/libdbus-1-3_1.2.1-r3_armv4t.ipk
 * opkg install http://buildhost.openmoko.org/daily-feed/armv4t/illume_0.0+svnr204-r12_armv4t.ipk
@@ -58,7 +59,11 @@ Most applications should bring up the keyboard automatically when keyboard input
 * restart x: /etc/init.d/xserver-nodm restart
 * enjoy the full qwerty keyboard
 
+All steps can be done automatically with this shell-script: [http://paste.ubuntuusers.de/raw/391361/ click]
+
 If you have problems with illume crashing, make sure that you don't have a copy of the original ASU Default.kbd file laying around (the one with the predictive dictionary).
+
+
 
 [[Category:Om 2008.8]]
 [[Category:Guides|Keyboard Om 2008.8]]
