/* Interessenten der Gruppe */

--- a/Openmoko_Local_Groups:_Hamburg.mw
+++ b/Openmoko_Local_Groups:_Hamburg.mw
@@ -31,5 +31,13 @@
 |
 |Ich warte noch (immer)
 |no
+|-
+|[[User:hanez|hanez]]
+|Linux, Gentoo, C, GTK
+|Telefonbuch <-> LDAP - Synchronisation
+|Hamburg
+|
+|Ja
+|Nein
 |}
 [[Category:Openmoko Local Groups]]
