--- a/Gestures.mw
+++ b/Gestures.mw
@@ -45,6 +45,12 @@ You're ready: make a gesture, make Neo change its screen orientation (''if you d
 * Launch the Gesture Manager:
  Home > Gestures
 * Select a gesture and click the first icon on the toolbar; Follow the instructions. Do the same for all the gestures!
+** Step 1: Launch Gesture Manager <br />[[Image:Accelges-Train-1.png]]
+** Step 2: This is the Gesture Manager <br />[[Image:Accelges-Train-2.png]]
+** Step 3: Select a gesture, and click Train (first icon from the toolbar) <br />[[Image:Accelges-Train-3.png]]
+** Step 4: Make the gesture (this step creates the gesture) <br />[[Image:Accelges-Train-4.png]]
+** Step 5: Make the gesture again (this step trains the gesture) <br />[[Image:Accelges-Train-5.png]]
+** Step 6: Select another gesture, and do the same <br />[[Image:Accelges-Train-6.png]]
 
 * Restart the Gesture Recognizer (use SSH):
  /etc/init.d/gesd-neo2 restart
