--- a/Gestures.mw
+++ b/Gestures.mw
@@ -60,7 +60,19 @@ You're ready: make a gesture, make Neo change its screen orientation (''if you d
 ===Running Gestures===
 * Use the script you have created before; '''be sure to run the script from the Neo, no SSH or VNC''':
  gesl-begin
-
+* There are 12 gestures available (once, you make one, a notification will pop up):
+*# Shake-shake gesture: <br />[[Image:Accelges-Recognize-1.png]]
+*# Forward-backward gesture: <br />[[Image:Accelges-Recognize-2.png]]
+*# Horizontal-circle gesture: <br />[[Image:Accelges-Recognize-3.png]]
+*# Z gesture: <br />[[Image:Accelges-Recognize-4.png]]
+*# Right gesture: <br />[[Image:Accelges-Recognize-5.png]]
+*# Left gesture: <br />[[Image:Accelges-Recognize-6.png]]
+*# Up gesture: <br />[[Image:Accelges-Recognize-7.png]]
+*# Down gesture: <br />[[Image:Accelges-Recognize-8.png]]
+*# Right-left gesture: <br />[[Image:Accelges-Recognize-9.png]]
+*# Left-right gesture: <br />[[Image:Accelges-Recognize-10.png]]
+*# Up-down gesture: <br />[[Image:Accelges-Recognize-11.png]]
+*# Down-up gesture: <br />[[Image:Accelges-Recognize-12.png]]
 ''Remark: If you don't start the Gesture Listener from the Neo, screen orientation won't work''
 
 ===How To Improve Recognition Accuracy===
