--- a/Gestures.mw
+++ b/Gestures.mw
@@ -81,6 +81,14 @@ You're ready: make a gesture, make Neo change its screen orientation (''if you d
 
 ==Alpha 2 Development Details==
 ===DBUS===
+Gesture Recognizer (gesd) sends signals on:
+ org.openmoko.accelges
+ /org/openmoko/accelges/Recognizer
+ org.openmoko.accelges.Recognizer.Recognized
+
+Try (on FSO distribution)
+ mdbus -s -l
+and make a gesture for more information on DBUS.
 
 ===Configuration Files===
 The configuration file for Neo is:
