--- a/Group_sales.mw
+++ b/Group_sales.mw
@@ -3051,11 +3051,16 @@ We are already 6, so 4 remaining. Contact me at : jec at jesc dot ch
 | 1
 | 0
 | 0
+|-| 9. Terry Lin(terry_lin@)
+| 1
+| 1
+| 1
 |-
+
 |Total number:
-| 12
-| 5
-| 0
+| 13
+| 6
+| 1
 |}
 -------------
 080805 status update by mkl23
