*Empty MediaWiki Message*

--- a/Introduction%2Fit.mw
+++ b/Introduction%2Fit.mw
@@ -1,11 +1,11 @@
 {{Introbox/it}}
-OpenMoko è un progetto che tenta di creare il primo set di software per cellulari completamente open-source del mondo.
+OpenMoko è un progetto che tenta di creare il primo set di software per cellulari completamente open-source al mondo.
 
-Noi creidamo nella standardizzazione del metodo bottom-up (definito e implementato dalla comunità), invece del top-down (definito da un gruppo ristretto).
+Crediamo nella standardizzazione del metodo bottom-up (definito e implementato dalla comunità), al posto del top-down (definito da un gruppo ristretto).
 
-Per un'introduzione più dettagliata leggere [http://lists.openmoko.org/pipermail/announce/2007-January/000000.html questo annuncio]
+Per un'introduzione più dettagliata, leggere [http://lists.openmoko.org/pipermail/announce/2007-January/000000.html questo annuncio]
 
-OpenMoko è progettato per girare su tutti i cellulari compatibili con Linux. Il primo cellulare OpenMoko completamente supportato è il FIC Neo1973.
+OpenMoko è stato progettato per girare su tutti i cellulari compatibili con Linux. Il primo cellulare OpenMoko completamente supportato è il FIC Neo1973.
 
 Quest'iniziativa è stata ideata da [[FIC/it|FIC Inc.]] e [http://www.openmoko.com OpenMoko, Inc.]
 
