--- a/Group_sales.mw
+++ b/Group_sales.mw
@@ -3051,12 +3051,12 @@ We are already 6, so 4 remaining. Contact me at : jec at jesc dot ch
 | 1
 | 0
 | 0
-|-| 9. Terry Lin(terry_lin@)
+|-
+| 9. Terry Lin(terry_lin@)
 | 1
 | 1
 | 1
 |-
-
 |Total number:
 | 13
 | 6
