--- a/Gestures.mw
+++ b/Gestures.mw
@@ -13,6 +13,18 @@ On The Neo Freerunner (''don't use SSH here, as screen orientation won't work if
  /etc/init.d/gesl start
 You're ready: make a gesture, make Neo change its screen orientation (''if you did watch the video, you'll know what to do'').
 
+===Training: The Quick Way===
+''OPTIONAL'': Stop the gesture recognizer, and listener:
+ /etc/init.d/gesd-neo2 stop
+ /etc/init.d/gesl stop
+Run
+ Home > Gestures
+Select a gesture, press Train, and follow instructions.
+
+''REQUIRE'': Start/restart the gesture recognizer, and listener:
+ /etc/init.d/gesd-neo2 start (from SSH, or from Neo)
+ /etc/init.d/gesl start ('''only from Neo''')
+
 ==Alpha 2 Release Details==
 
 ===Prerequisites===
