--- a/Gestures.mw
+++ b/Gestures.mw
@@ -148,47 +148,8 @@ model	horizontal circle	horizontal-circle.model
 model	forward, backward	forward-backward.model
 model	z	z.model
 </pre>
-# Paul-Valentin Borza <paul@borza.ro>
 
-# gestures configuration file for Neo/Wii
-
-# classes and probabilities for classifier
-#    sclass\tFILE	static acceleration class
-#    dclass\tFILE	dynamic acceleration class
-#    sclassp\tVALUE	probability for static acceleration class
-#    dclassp\tVALUE	probability for dynamic acceleration class
-sclass	s.class
-dclass	d.class
-sclassp	0.4
-dclassp	0.6
-
-# classes for recognizer (add more than one)
-#    class\tid\tFILE	static acceleration class
-class	screen_zzp	screen_zzp.class
-class	screen_zzn	screen_zzn.class
-class	screen_zpz	screen_zpz.class
-class	screen_znz	screen_znz.class
-class	screen_pzz	screen_pzz.class
-class	screen_nzz	screen_nzz.class
-class	screen_npp	screen_npp.class
-class	screen_nnp	screen_nnp.class
-class	screen_pnp	screen_pnp.class
-class	screen_ppp	screen_ppp.class
-
-# models for recognizer (add more than one)
-#    model\tid\tFILE	dynamic acceleration model
-model	left	left.model
-model	left, and return	left-and-right.model
-model	right	right.model
-model	right, and return	right-and-left.model
-model	up	up.model
-model	up, and return	up-and-down.model
-model	down	down.model
-model	down, and return	down-and-up.model
-model	shake, shake	shake-shake.model
-model	horizontal circle	horizontal-circle.model
-model	forward, backward	forward-backward.model
-model	z	z.model
+Again, if you modify the configuration file, you'll have to restart the gesture recognizer (gesd).
 
 ===Daemons===
 Gesture Recognizer that uses the top accelerometer (/dev/input/event2):
