*Empty MediaWiki Message*

--- a/Gestures.mw
+++ b/Gestures.mw
@@ -158,6 +158,12 @@ Gesture Listener that switches screen orientation, and notifies the user of reco
  /etc/init.d/gesl start|stop|restart
 ''Remark: Start the recognizer first, and after that the listener (obvious, but important)''
 
+=Components/Applications=
+Try playing with:
+ gesd (gesture recognizer)
+ gesl (gesture listener)
+ gesm (gesture manager)
+
 =Known Issues=
 * One, or both accelerometers might not work. Try:
  hexdump /dev/input/event2 (for top accelerometer)
@@ -168,7 +174,7 @@ Gesture Listener that switches screen orientation, and notifies the user of reco
 * After a while, the accelerometer send bogus values (values that are lower than what they should be). If this happens, the classifier won't be able to classify dynamic/static acceleration, and nothing will work - nor the gesture training, nor the gesture recognition.
  Restart your Neo!
 
-=Applications=
+=Use Cases=
 * Mute audio or suspend when screen is facing down; (NO SUPPORT FOR MUTE/UNMUTE AUDIO IN NEO FOR NOW)
 * Go to main menu when shaken; (NO SUPPORT YET)
 * Volume up/down during call when tilting left/right (still unclear); (NO SUPPORT YET)
