/* Some APN names for reference */

--- a/Manually_using_GPRS.mw
+++ b/Manually_using_GPRS.mw
@@ -265,7 +265,7 @@ fido
 |-
 | USA || Cingular (AT&T) || Less than full internet || wap.cingular / may require *99***1# || ||
 |-
-| USA || T-mobile || Anything less than full internet || wap.voicestream.com || ||
+| USA || T-mobile || Anything less than full internet || wap.voicestream.com ||  || Need to set proxy to 216.155.165.50  T-Mobile docs say "216.155.165.050".  050 octal = 40 decimal and will *not* work.  I think port is 8080 or 9100.  No luck w/ pppd scripts.  GPRS_FSO directions work under FSO though.
 |- 
 | USA || T-mobile || Regular internet plan || internet2.voicestream.com || || [[T-Mobile pppd scripts]]
 |- 
