*Empty MediaWiki Message*

--- a/Zhone.mw
+++ b/Zhone.mw
@@ -7,16 +7,16 @@ The Framework Testing Image.
 ...
 
 ==Installing Zhone on Ubuntu ==
-- open 'Software sources'
-- add 'deb http://pkg-fso.alioth.debian.org/debian/ unstable main'
-- add 'deb http://ftp.debian.org/debian/ experimental main'
-- close 'Software sources'
-- install package libeet1 from http://nl.archive.ubuntu.com/ubuntu/pool/universe/e/eet/libeet1_1.0.1-1_i386.deb
-- open terminal
-- enter 'sudo apt-get install zhone'
-- open 'Software sources'
-- remove the ftp.debian.org entry
-- close 'Software sources'
-- enter zhone into the terminal and watch the magic happen ;) 
+* open 'Software sources'
+* add 'deb http://pkg-fso.alioth.debian.org/debian/ unstable main'
+* add 'deb http://ftp.debian.org/debian/ experimental main'
+* close 'Software sources'
+* install package libeet1 from http://nl.archive.ubuntu.com/ubuntu/pool/universe/e/eet/libeet1_1.0.1-1_i386.deb
+* open terminal
+* enter 'sudo apt-get install zhone'
+* open 'Software sources'
+* remove the ftp.debian.org entry
+* close 'Software sources'
+* enter zhone into the terminal and watch the magic happen ;) 
 
 [[Category:Hardware]]
