--- a/Openmoko_Local_Groups:_Eindhoven.mw
+++ b/Openmoko_Local_Groups:_Eindhoven.mw
@@ -11,6 +11,11 @@
 |dbus and pim applications
 |Eindhoven
 |-
+|[[User:ChristW|ChristW]]
+|C/C++
+|GPS/OSM stuff
+|Eindhoven
+|-
 |}
 
 [[Category:Openmoko Local Groups]]
