*Empty MediaWiki Message*

--- a/Zhone.mw
+++ b/Zhone.mw
@@ -19,4 +19,12 @@ The Framework Testing Image.
 * close 'Software sources'
 * enter zhone into the terminal and watch the magic happen ;) 
 
+== Developping Zhone ==
+* Install Zhone see [[Zhone#Installing Zhone on Ubuntu]]
+* Download tar.gz package from http://pkg-fso.alioth.debian.org/debian/pool/main/z/zhone/
+* extract to ~/zhone
+* cd ~/zhone/zhone-milestone2+git
+* chmod +x src/zhone
+You have to edit file ~/zhone/zhone-milestone2+git/src/zhone 
+
 [[Category:Hardware]]
