*Empty MediaWiki Message*

--- a/Building_FSO.mw
+++ b/Building_FSO.mw
@@ -2,7 +2,7 @@
 
 ''This information is taken as is from [http://wiki.openembedded.net/index.php/OEandYourDistro#Using_OpenEmbedded_on_Linux_systems OpenEmbedded Wiki]. Some commentaries are voluntarily stripped in order to keep this page simple, please look on OE Wiki for more information.''
 
-WHY, OH, WHY, DO PEOPLE DUPLICATE INFORMATION ON HOW TO BUILD OPENEMBEDDED ON YET ANOTHER WIKI PAGE.  Just point to the OE pages, or to the MokoMakefile page.
+{{Note|WHY, OH, WHY, DO PEOPLE DUPLICATE INFORMATION ON HOW TO BUILD OPENEMBEDDED ON YET ANOTHER WIKI PAGE.  Just point to the OE pages, or to the MokoMakefile page.}}
 
 = Getting Open Embedded =
 
