--- a/Wiki_Issues.mw
+++ b/Wiki_Issues.mw
@@ -31,6 +31,7 @@ Accepted and implemented requests should be deleted. Rejected requests should be
 
 ===Tidy up===
 * [[Wishlist:Text Input]] - tidy up/sort, give short feedback to each method
+* [[Booting_from_SD]] - tidy up and a rewrite
 
 ===Categories ===
 
