--- a/Openmoko_Local_Groups:_Montreal.mw
+++ b/Openmoko_Local_Groups:_Montreal.mw
@@ -115,7 +115,14 @@ The following is a list of people interested in OpenMoko from in and around Mont
 |
 |[http://www.zapquebec.org/ zapquebec] volunteer, cultural/technical interests
 |-
-|}
+|[[User:Wjbaird|Warren Baird]]
+|Product Manager, Software Developer, Photographer
+|Owner, OM Freerunner
+|Montreal
+|[[Image: Moko.jpg|center]]
+|
+|
+|-|}
 
 
 See [[Talk:OpenMoko_Local_Groups:_Montreal|discussion]]
