*Empty MediaWiki Message*

--- a/Zhone.mw
+++ b/Zhone.mw
@@ -4,11 +4,10 @@
 
 The Framework Testing Image.
 
-...
-
 ==Installing Zhone on Ubuntu ==
 * open 'Software sources'
 * add 'deb http://pkg-fso.alioth.debian.org/debian/ unstable main'
+* add 'deb-src http://pkg-fso.alioth.debian.org/debian/ unstable main'
 * add 'deb http://ftp.debian.org/debian/ experimental main'
 * close 'Software sources'
 * install package libeet1 from http://nl.archive.ubuntu.com/ubuntu/pool/universe/e/eet/libeet1_1.0.1-1_i386.deb
@@ -21,10 +20,6 @@ The Framework Testing Image.
 
 == Developping Zhone ==
 * Install Zhone see [[Zhone#Installing Zhone on Ubuntu]]
-* Download tar.gz package from http://pkg-fso.alioth.debian.org/debian/pool/main/z/zhone/
-* extract to ~/zhone
-* cd ~/zhone/zhone-milestone2+git
-* chmod +x src/zhone
-You have to edit file ~/zhone/zhone-milestone2+git/src/zhone 
+* sudo apt-get source zhone
 
 [[Category:Hardware]]
