*Empty MediaWiki Message*

--- a/Zhone.mw
+++ b/Zhone.mw
@@ -20,6 +20,6 @@ The Framework Testing Image.
 
 == Developping Zhone ==
 * Install Zhone see [[Zhone#Installing Zhone on Ubuntu]]
-* sudo apt-get source zhone
+* apt-get source zhone
 
 [[Category:Hardware]]
