--- a/Group_sales.mw
+++ b/Group_sales.mw
@@ -185,6 +185,7 @@ Status : 3/10
 * Vernim, [http://wiki.openmoko.org/wiki/Special:Emailuser/Vernim Contact]
 * nninov, [http://wiki.openmoko.org/wiki/Special:Emailuser/nninov Contact], 26 June 2008
 * jdivanov, [http://wiki.openmoko.org/wiki/Special:Emailuser/jdivanov Contact], 16 June 2008 $-
+* ZMan, [http://wiki.openmoko.org/wiki/Special:Emailuser/ZMan Contact], 14 August
 
 == Canada ==
 
