--- a/Group_sales.mw
+++ b/Group_sales.mw
@@ -180,12 +180,12 @@ Status : 10/10
 
 '''Group 2''' 
 
-Status : 3/10
+Status : 4/10
 
 * Vernim, [http://wiki.openmoko.org/wiki/Special:Emailuser/Vernim Contact]
 * nninov, [http://wiki.openmoko.org/wiki/Special:Emailuser/nninov Contact], 26 June 2008
 * jdivanov, [http://wiki.openmoko.org/wiki/Special:Emailuser/jdivanov Contact], 16 June 2008 $-
-* ZMan, [http://wiki.openmoko.org/wiki/Special:Emailuser/ZMan Contact], 14 August
+* ZMan, [http://wiki.openmoko.org/wiki/Special:Emailuser/ZMan Contact], 14 August 2008
 
 == Canada ==
 
