*Empty MediaWiki Message*

--- a/Gestures.mw
+++ b/Gestures.mw
@@ -9,8 +9,12 @@
 SSH Neo Freerunner:
  wget http://accelges.googlecode.com/files/accelges_0.1.0-svnr204-r2_armv4t.ipk
  opkg install accelges_0.1.0-svnr204-r2_armv4t.ipk
-On The Neo Freerunner (''don't use SSH here, as screen orientation won't work if you use SSH''):
+On The Neo Freerunner 
  /etc/init.d/gesl start
+Over SSH you must use
+ DISPLAY=:0 /etc/init.d/gesl start
+(''otherwise screen orientation won't work''):
+
 You're ready: make a gesture, make Neo change its screen orientation (''if you did watch the video, you'll know what to do'').
 
 ===Training: The Quick Way===
