*Empty MediaWiki Message*

--- a/GPRS_FSO.mw
+++ b/GPRS_FSO.mw
@@ -1,3 +1,4 @@
+{{FSO}}
 This page documents the GSM networking solutions (commonly known as GPRS) using the [[OpenmokoFramework|FreeSmartphone.Org]] framework (FSO).
 
 There are other ways to enable wireless communications on the smartphone, including [[Bluetooth]] and [[Wireless_Networking|WLAN]].
