--- a/ReMoko.mw
+++ b/ReMoko.mw
@@ -15,13 +15,13 @@
 *'''FSO Milestone 2'''
 ** The FSO images built before 20080807 have a bug in the framework bluetooth system, to use remoko in a older FSO image you will need to change the lines below in '/usr/lib/python2.5/site-packages/framework/subsystems/ousaged/generic.py':
 
-  98
-  -        proxy = self.bus.get_object( "org.freesmartphone.Device", "/org/freesmartphone/Device/PowerControl/" + self.name )
-  +        proxy = self.bus.get_object( "org.freesmartphone.odeviced", "/org/freesmartphone/Device/PowerControl/" + self.name )
+  Line 98
+  - proxy = self.bus.get_object( "org.freesmartphone.Device", "/org/freesmartphone/Device/PowerControl/" + self.name )
+  + proxy = self.bus.get_object( "org.freesmartphone.odeviced", "/org/freesmartphone/Device/PowerControl/" + self.name )
 
-***209
-****-    genericUsageControl.addResource( DummyResource( genericUsageControl, "Bluetooth" ) )
-****+    genericUsageControl.addResource( ODeviceDResource( genericUsageControl, "Bluetooth" ) )
+  Line 209
+  - genericUsageControl.addResource( DummyResource( genericUsageControl, "Bluetooth" ) )
+  + genericUsageControl.addResource( ODeviceDResource( genericUsageControl, "Bluetooth" ) )
 
 after that you will need to restart the framework (kill the process and start it again or simply restart the device).
 
