--- a/ReMoko.mw
+++ b/ReMoko.mw
@@ -102,7 +102,7 @@ after that you will need to restart the framework (kill the process and start it
 * '''Add your idea here'''
 
 ==Wish List==
-* Possibility to control presentations easily (few buttons, PG-UP, PG-DOWN for example) - <font color="#FF9900">In progress</font>
+* Possibility to control presentations easily (few buttons, PG-UP, PG-DOWN for example) - <font color="#00FF00">Done</font>
 ** maybe even navigation via gestures
 ** possibly use the touchscreen similar to a touchpad (mouse) - <font color="#00FF00">Done</font>
 *** maybe it is too much, but if you manage to make the touchpad, you could get a small screenshot of the big screen (it is useful for presentations if you want to draw/write something without quality).
